src/objects/mana_educational_material_delivery__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MANA educational material deliveries</relationshipLabel>
        <relationshipName>MANA_educational_material_deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District_Correct__c</fullName>
        <formula>substitute( District__c , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_Correct__c</fullName>
        <formula>substitute(  Municipality__c , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <label>Municipality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_families_received_material__c</fullName>
        <label>Number of families received material</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture_1__c</fullName>
        <label>Picture 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture_2__c</fullName>
        <label>Picture 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture_3__c</fullName>
        <label>Picture 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quantity_of_endowment_delivered__c</fullName>
        <label>Quantity of endowment delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_of_material_delivered__c</fullName>
        <label>Quantity of material delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_Correct__c</fullName>
        <formula>substitute( Region__c , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>MANA educational material deliveries</relationshipLabel>
        <relationshipName>MANA_educational_material_deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_will_be_delivered__c</fullName>
        <label>What will be delivered</label>
        <picklist>
            <picklistValues>
                <fullName>Material educativo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dotación</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>MANA educational material delivery</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MANA educational material delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MANA educational material deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>